--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Model</title>
     <style>
-        .plants {
+        .box {
             background-color: cadetblue;
             width:200px;
             height:200px;
             border: 10px solid black;
             padding: 20px;
         }
-        .sun {
+        .box1 {
             background-color: gold;
             width:200px;
             height:200px;
@@ -20,7 +20,7 @@
             border-width:20px 10px;
             margin-left: 260px;
         }
-        .gumamela {
+        .box2 {
             background-color: indianred;
             width:200px;
             height:200px;
@@ -33,15 +33,15 @@
     </style>
 </head>
 <body>
-    <div class="plants">
+    <div class="box">
         <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Aliquam at apien porttitor urna elementum lacinia. In id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</p>
     </div>
 
-    <div class="sun">
+    <div class="box2">
 
     </div>
 
-    <div class="gumamela">
+    <div class="box3">
 
     </div>
 </body>
