--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
         }
         p {
             margin: -10px;
+            font-size: 15px;
         }
     </style>
 </head>
+<nav class="navigator">
+   <a>HOME</a>
+   <a href="about-us.html">ABOUT US</a>
+   <a href="contact-us.html">CONTACT US</a>
+</nav>
 <body>
     <div class="box">
         <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Aliquam at apien porttitor urna elementum lacinia. In id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</p>
